# pcl-fuerte-release_defunct

./: CMakeLists.txt  bloom.conf  catkin.conf  package.xml  stack.xml  stack.yaml
bloom/: rules.em
catkin/: rules.em
cmake/: pcl_find_ros.cmake
common/: CMakeLists.txt
common/src/: distances.cpp  io.cpp  parse.cpp  pcl_base.cpp
common/test/: test_common.cpp
debian/: changelog  control  rules
debian/source/: patch-header
features/src/: 3dsc.cpp  boundary.cpp  cvfh.cpp  fpfh.cpp  fpfh_omp.cpp  intensity_gradient.cpp  intensity_spin.cpp  moment_invariants.cpp  multiscale_feature_persistence.cpp  normal_3d.cpp  normal_3d_omp.cpp  normal_based_signature.cpp  pfh.cpp  pfhrgb.cpp  ppf.cpp  rift.cpp  rsd.cpp  statistical_multiscale_interest_region_extraction.cpp  usc.cpp  vfh.cpp
filters/src/: conditional_removal.cpp  extract_indices.cpp  filter.cpp  passthrough.cpp  project_inliers.cpp  radius_outlier_removal.cpp  statistical_outlier_removal.cpp  voxel_grid.cpp
io/src/: lzf.cpp  obj_io.cpp  pcd_io.cpp  ply_io.cpp  vtk_io.cpp  vtk_lib_io.cpp
io/test/: test_io.cpp
kdtree/src/: kdtree_flann.cpp
ros/: manifest.xml
sample_consensus/src/: lmeds.cpp  mlesac.cpp  msac.cpp  prosac.cpp  ransac.cpp  rmsac.cpp  rransac.cpp  sac_model_circle.cpp  sac_model_cylinder.cpp  sac_model_line.cpp  sac_model_parallel_line.cpp  sac_model_parallel_plane.cpp  sac_model_perpendicular_plane.cpp  sac_model_plane.cpp  sac_model_registration.cpp  sac_model_sphere.cpp
search/src/: kdtree.cpp  octree.cpp  organized.cpp
segmentation/src/: extract_clusters.cpp  extract_polygonal_prism_data.cpp  sac_segmentation.cpp  segment_differences.cpp
surface/src/: concave_hull.cpp  gp3.cpp  (+3 more)
test/: test_feature.cpp  test_ii_normals.cpp  test_registration.cpp  test_surface.cpp
(+144 files in other folders)
