<package>
  <name>pcl</name>
  <version>1.6.0</version>
  <description>The Point Cloud Library (or PCL) for point cloud processing - development
    The PCL framework contains numerous state-of-the art algorithms including
    filtering, feature estimation, surface reconstruction, registration, model
    fitting and segmentation.</description>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <author>Open Perception</author>
  <license>BSD</license>
  <copyright>Open Perception</copyright>

  <url type="website">http://www.pointclouds.org</url>
  <url type="bugtracker">http://dev.pointclouds.org</url>
  <url type="repository">https://github.com/wg-debs/pcl</url>

  <build_depends>boost</build_depends>
  <build_depends>common_msgs</build_depends>
  <build_depends>eigen</build_depends>
  <build_depends>flann</build_depends>
  <build_depends>libmysqlclient-dev</build_depends>
  <build_depends>libqhull</build_depends>
  <build_depends>libusb-1.0-dev</build_depends>
  <build_depends>libvtk</build_depends>
  <build_depends>python-sphinx</build_depends>
  <build_depends>roscpp_core</build_depends>
  <build_depends>std_msgs</build_depends>

  <buildtool_depend>cmake</buildtool_depend>

  <run_depends>boost</run_depends>
  <run_depends>common_msgs</run_depends>
  <run_depends>eigen</run_depends>
  <run_depends>flann</run_depends>
  <run_depends>libmysqlclient-dev</run_depends>
  <run_depends>libqhull</run_depends>
  <run_depends>libusb-1.0-dev</run_depends>
  <run_depends>libvtk</run_depends>
  <run_depends>python-sphinx</run_depends>
  <run_depends>roscpp_core</run_depends>
  <run_depends>std_msgs</run_depends>

</package>
